# napari-atlas-stitch

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: README.md
scripts/: atlas_refinement_smoke_test.py
src/atlas_stitch/: __init__.py  models.py  napari.yaml  ome_zarr_export.py  refinement_overlap.py  widget.py
tests/: test_atlas_ome_zarr_export.py  test_atlas_refinement_overlap.py  test_atlas_refinement_solver.py  test_atlas_ui_metadata.py  test_manual_stitch_workflow.py
